--- a/BookService.MVC/Views/Publishers/Index.cshtml
+++ b/BookService.MVC/Views/Publishers/Index.cshtml
@@ -13,5 +13,6 @@
                 </li>
             }
         </ul>
+        <a class="btn btn-warning" asp-action="Insert">Insert</a>
     </div>
 </div>
