--- a/BookService.MVC/Views/Shared/_Layout.cshtml
+++ b/BookService.MVC/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Authors" asp-action="Index">Authors</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="IndexVue">Vue.js</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
