--- a/BookService.MVC/wwwroot/css/site.css
+++ b/BookService.MVC/wwwroot/css/site.css
@@ -54,3 +54,18 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+
+
+
+.bookTitle {
+    color: darkblue;
+    font-size: small;
+}
+
+.bookAuthorName {
+    color: darkred;
+    font-style: italic;
+    font-size: small;
+}
